--- a/src/gmp/ChangeLog
+++ b/src/gmp/ChangeLog
@@ -1,5 +1,5 @@
-Copyright 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999 2000, 2001, 2002
-Free Software Foundation, Inc.
+Copyright 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999 2000, 2001,
+2002, 2003, 2004 Free Software Foundation, Inc.
 .
 This file is part of the GNU MP Library.
 .
@@ -18,6 +18,680 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+
+2004-09-22  Torbjorn Granlund  <tege@swox.com>
+
+	* Version 4.1.4 released.
+
+	* config.sub: Recognize viac3*.
+
+2004-09-21  Torbjorn Granlund  <tege@swox.com>
+
+	* gmp.texi: Update cpu list.
+
+	* configure.in: Merge x86_64 changes from HEAD.
+	* acinclude.m4 (X86_PATTERN): Add viac3.
+
+2004-09-20  Torbjorn Granlund  <tege@swox.com>
+
+	* config.guess: Recognize AMD's hammer processors, return x86_64.
+
+	* tests/mpz/t-mul.c (ref_mpn_mul): Fudge tmp allocation for toom3.
+
+2004-09-19  Torbjorn Granlund  <tege@swox.com>
+
+	* tests/misc.c (tests_rand_start): Shift tv_usec for better seeding.
+
+2004-09-18  Torbjorn Granlund  <tege@swox.com>
+
+	* tests/misc.c (tests_rand_start): Invoke fflush after printing seed.
+
+	* tests/mpz/t-mul.c (main): Check environment for GMP_CHECK_FFT, run
+	extra FFT tests if set.
+	(ref_mpn_mul): Use library code for kara and toom, but skewded so that
+	we never use the same algorithm that we're testing.
+	(mul_kara): Delete.
+	(debug_mp): Print just one line of large numbers.
+	(ref_mpn_mul): Rework usage of tp temporary space.
+
+2004-09-17  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/generic/mul_fft.c: Additional changes from Paul.
+
+2004-09-16  Torbjorn Granlund  <tege@swox.com>
+
+	* gmp-h.in (__GNU_MP_VERSION_PATCHLEVEL): Bump to 4.1.4.
+
+2004-04-16  Paul Zimmermann  <Paul.Zimmermann@loria.fr>
+
+	* mpn/generic/mul_fft.c (mpn_mul_fft): Fix a bug in the choice of the
+	recursive fft parameters.
+
+2004-09-15  Torbjorn Granlund  <tege@swox.com>
+
+	* configure.in: Add support for powerpc64 under GNU/Linux.
+
+	* mpn/powerpc64/linux64.m4: New file.
+
+	* mpn/powerpc64/mul_1.asm: Change cal => addi.
+	* mpn/powerpc64/addmul_1.asm: Likewise.
+	* mpn/powerpc64/submul_1.asm: Likewise.
+	* mpn/powerpc64/sqr_diagonal.asm: Likewise.
+
+2004-05-14  Kevin Ryde  <kevin@swox.se>
+
+	* mpf/sub.c: When one operand cancels high limbs of the other, strip
+	high zeros on the balance before truncating to destination precision.
+	Truncating first loses accuracy and can lead to a result 0 despite
+	operands being not equal.  Reported by John Abbott.
+	Also, ensure exponent is zero when result is zero, for instance if
+	operands are exactly equal.
+
+2004-04-26  Kevin Ryde  <kevin@swox.se>
+
+	* Version 4.1.3 released.
+
+2004-04-26  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/*.asm: Add Itanium2 cycle counts.
+
+2004-04-25  Kevin Ryde  <kevin@swox.se>
+
+	* mpfr/tests/tsqrt_ui.c: Disable this test, it fails on debian s390,
+	apparently due to sqrt() dodginess.  Reported by Laurent Fousse.
+
+2004-04-24  Kevin Ryde  <kevin@swox.se>
+
+	* mpz/aorsmul.c, mpz/aorsmul_i.c, mpz/cfdiv_q_2exp.c,
+	mpz/cfdiv_r_2exp.c, mpq/aors.c, mpf/ceilfloor.c: Give REGPARM_ATTR()
+	on function definition too, as demanded by gcc 3.4.
+
+2004-04-22  Kevin Ryde  <kevin@swox.se>
+
+	* tests/rand/t-lc2exp.c (check_bigc1): New test.
+
+	* fdl.texi: Tweak @appendixsubsec -> @appendixsec to match our
+	preference for this in an @appendix, and because texi2pdf doesn't
+	support @appendixsubsec directly within an @appendix.
+
+	* mpfr/set_str.c: Patch from mpfr web page, supporting upper case
+	letters, as per mpf_set_str.
+
+	* mpfr/out_str.c: Patch from mpfr web page, supporting NULL for FILE
+	stream argument.
+
+	* mpfr/agm.c: Patch from mpfr web page, fixing division by zero if
+	mpfr_agm arguments are too close.
+
+	* mpfr/exp_2.c: Patch from mpfr web page, fixing wrong result from
+	mpfr_exp for large argument.
+
+	* mpfr/urandomb.c: Patch from mpfr web page, fixing seg fault if
+	random number is zero.
+
+2004-04-20  Kevin Ryde  <kevin@swox.se>
+
+	* macos/configure (what_objects): Only demand 9 object files, as for
+	instance occurs in the scanf directory.
+	(asm files): Transform labels L(foo) -> Lfoo.  Take func name from
+	PROLOGUE to support empty "EPILOGUE()".  Recognise and subsitute
+	register name "define()"s.
+	* macos/Makefile.in (CmnObjs): Add tal-notreent.o.
+
+	* texinfo.tex: Update to 2004-04-07.08 from texinfo 4.7.
+	* gmp.texi (@copying): Don't put a line break in @ref within
+	@copying, recent texinfo.tex doesn't like that.
+	* mpfr/mpfr.texi (Assigning Floats): Balance parens in mpfr_set_si,
+	demanded by recent texinfo.tex.
+
+2004-04-16  Kevin Ryde  <kevin@swox.se>
+
+	* macos/configure, macos/Makefile.in: Add printf and scanf directories.
+
+	* COPYING: Restore from FSF, end had somehow been truncated.
+	* COPYING.LIB: Update to version 2.1 from FSF.
+	* fdl.texi: Update to version 1.2 from FSF.
+
+	* tests/mpz/t-gcd.c (check_data): New function, exercising K6
+	gcd_finda bug.
+
+	* randlc2x.c (gmp_randinit_lc_2exp): Mask _mp_c down to m2exp bits, as
+	assumed by randraw.c.
+
+	* randraw.c (lc): In seedn==0 case, discard low m2exp/2 bits same as
+	general case.  Fixes _gmp_rand returning more bits than requested.
+
+2004-04-16  Paul Zimmermann  <Paul.Zimmermann@loria.fr>
+
+	* mpn/generic/mul_fft.c (mpn_fft_add_modF): Reduce correctly to
+	ap[n]<=1 when c==3, as required by subsequent operations.
+
+2004-04-14  Kevin Ryde  <kevin@swox.se>
+
+	* mpfr/mpfr.texi: Use @ifnottex around @top, for the benefit of
+	makeinfo 4.6 --html.
+
+	* randraw.c (lc): Zero out limbs to be produced, since seedn==0 and
+	small "a" cases may not do this.
+
+	* gmp.texi (Reentrancy, Random State Initialization): Note
+	gmp_randinit use of gmp_errno is not thread safe.  Reported by Vincent
+	Lefèvre.
+
+	* gmp.texi (Random State Initialization): Add index entries for
+	gmp_errno and constants.
+
+	* randraw.c (lc): Allow for small "a" possibly making tn less than
+	m2exp in limbs.
+
+	* randsd.c: Allow negative seed value.
+
+	* configure.in (--enable-mpbsd): Typo Berkley -> Berkeley in help msg.
+
+2004-04-12  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (ABI and ISA): Move @sp 1, for the benefit of makeinfo
+	--docbook in texinfo 4.6.
+
+	* gmp.texi (References): Add URL for "GMP Square Root" paper.
+
+	* demos/perl/GMP.xs (static_functable): New macro, use it for all
+	function tables, to support mingw DLL builds.
+
+	* demos/perl/GMP.pm, Makefile.PL (VERSION): Set to '2.00'.
+	* demos/perl/GMP.pm (COPYRIGHT): New in the doc section.
+
+	* demos/perl/sample.pl: Print the module and library versions in use.
+
+2004-04-09  Kevin Ryde  <kevin@swox.se>
+
+	* mpfrxx.h: Fix typo in assignments of mpfr_class from mpf_class.
+	Reported by Derrick Bass.
+
+	* tests/cxx/t-locale.cc: Use <strstream> instead of <strstream.h>, the
+	latter not available in g++ 3.3, and use namespace std to support this.
+
+	* longlong.h [powerpc]: Test CPU_FAMILY==PPC for VxWorks, not just for
+	PPC defined.  Amend use of PPC for gcc 2.7.x similarly.  Reported by
+	Mark Haigh.
+
+	* configfsf.guess, configfsf.sub: Update to 2004-03-12.
+
+	* configure.in (sparc64-*-*): Use -xarch=v8plus in cc flags, needed
+	for the mpn/sparc32/v9 assembler code.  Reported by Nicholas Oxhøj.
+
+	* tests/mpz/t-import.c, tests/mpz/t-export.c: Add <string.h> for
+	memcmp and memset.
+
+	* gmp.texi (Integer Logic and Bit Fiddling): Say ULONG_MAX as per
+	limits.h, instead of MAX_ULONG.
+
+	* gmp-h.in (__GNU_MP_VERSION_PATCHLEVEL): Bump to 4.1.3.
+
+	* Makefile.am (LIBGMP_LT_REVISION, LIBGMPXX_LT_REVISION,
+	LIBMP_LT_REVISION): Increment for new release.
+
+	* mpfr/rnd_mode.c (mpfr_set_machine_rnd_mode): exit(0) if desired mode
+	not available, for the benefit of ARM systems without FE_TOWARDZERO.
+
+	* gmp-impl.h (union ieee_double_extract): Add __s390__ for big endian.
+
+2004-04-07  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/x86/k6/gcd_finda.asm: Correction jbe -> jb in initial setups.
+	Zero flag is wrong here, it relects only the high limb of the compare,
+	leading to n1>=n2 not satisfied and wrong results.  cp[1]==0x7FFFFFFF
+	with cp[0]>=0x80000001 provokes this.
+
+	* gmp.texi (BSD Compatible Functions): Note "pow" name clash under
+	the pow function description too.
+	(Language Bindings): Add XEmacs (betas at this stage).  Reported by
+	Jerry James.
+
+	* tests/refmpn.c (refmpn_mod2): Correction to ASSERTs, r==a is allowed.
+
+2004-03-31  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Language Bindings): Add GOO, MLGMP and Numerix.
+
+2004-03-04  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Reentrancy): Note C++ mpf_class constructors using
+	global default precision.
+	(C++ Interface Floats): Describe operator= copying the value, not the
+	precision, and what this can mean about copy constructor versus
+	default constructor plus assignment.
+
+2004-02-29  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (C++ Interface Integers): Note / and % rounding follows
+	C99 / and %.
+
+2004-02-22  Kevin Ryde  <kevin@swox.se>
+
+	* gmp-impl.h (USE_LEADING_REGPARM): Disable under prof or gprof, for
+	the benefit of freebsd where .mcount clobbers registers.  Spotted by
+	Torbjorn.
+	* configure.in (WANT_PROFILING_PROF, WANT_PROFILING_GPROF): New
+	AC_DEFINEs.
+
+2004-01-24  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Miscellaneous Float Functions): For mpf_random2, note
+	exponent is in limbs.
+
+2004-01-17  Kevin Ryde  <kevin@swox.se>
+
+	* gmp-h.in (_GMP_H_HAVE_FILE): Add _MSL_STDIO_H for Metrowerks.
+	Reported by Tomas Zahradnicky.
+
+2004-01-07  Kevin Ryde  <kevin@swox.se>
+
+	* mp-h.in: Use "! defined (__GMP_WITHIN_CONFIGURE)" in the same style
+	as gmp-h.in (though mp-h.in is not actually used during configure).
+
+	* gmp-h.in, mp-h.in (__GMP_SHORT_LIMB): Renamed from _SHORT_LIMB, to
+	keep in our namespace.  (Not actually used anywhere currently.)
+	Reported by Patrick Pelissier.
+
+	* mp-h.in (__GMP_DECLSPEC_EXPORT, __GMP_DECLSPEC_IMPORT) [__GNUC__]:
+	Use __dllexport__ and __dllimport__ to keep out of application
+	namespace.  Same previously done in gmp-h.in.
+
+2004-01-03  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Single Limb Division): Correction to tex expression
+	for (1/2)x1.
+
+2003-12-31  Kevin Ryde  <kevin@swox.se>
+
+	* demos/perl/GMP.xs (scan0, scan1): Return ~0 for not-found.
+	* demos/perl/GMP.pm: Describe this, remove the note about ULONG_MAX
+	being the same as ~0 (which is not true in old perl).
+	* demos/perl/test.pl: Update tests.
+	* demos/perl/typemap (gmp_UV): New type.
+
+	* demos/perl/test.pl (fits_slong_p): Comment out uv_max test, it won't
+	necessarily exceed a long.
+
+	* demos/perl/GMP.pm: Add a remark about get_str to the bugs section.
+
+2003-12-23  Kevin Ryde  <kevin@swox.se>
+
+	* demos/perl/typemap (MPZ_ASSUME, MPQ_ASSUME, MPF_ASSUME): Remove
+	output rules, these are only meant for inputs.
+	(MPZ_MUTATE): Remove, not used since changes for magic.
+
+	* demos/perl/GMP.xs (mpz_class_hv, mpq_class_hv, mpf_class_hv): New
+	variables, initialized in BOOT.
+	* demos/perl/GMP.xs, demos/perl/typemap: Use them and explicit
+	sv_bless, to save a gv_stashpv for every new object.
+
+2003-12-21  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Integer Logic and Bit Fiddling): Say "bitwise" in
+	mpz_and, mpz_ior and mpz_xor, to avoid any confusion with what C means
+	by "logical".  Reported by Rüdiger Schütz.
+
+2003-12-13  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Miscellaneous Integer Functions): Note mpz_sizeinbase
+	can be used to locate the most significant bit.  Reword a bit for
+	clarity.
+
+	* tests/devel/try.c (mpn_divexact_by3_fun, mpn_modexact_1_odd_fun):
+	Correction to return values.
+
+	* tests/t-constants.c (main), tests/mpz/t-jac.c (try_si_zi):
+	Correction to printfs.
+
+2003-12-10  Kevin Ryde  <kevin@swox.se>
+
+	* demos/perl/test.pl: Should be $] for perl version in old perl.
+
+	* demos/perl/Makefile.PL: Don't install sample.pl and test2.pl.
+
+	* demos/perl/GMP.xs (use_sv): Prefer PV over IV or NV to avoid any
+	rounding.
+	* demos/perl/test.pl: Exercise this.
+
+	* demos/perl/GMP/Mpf.pm (overload_string): Corrections to $# usage.
+	* demos/perl/test.pl: Exercise this.
+
+2003-12-08  Kevin Ryde  <kevin@swox.se>
+
+	* demos/perl/GMP.pm: Correction to canonicalize example.
+
+	* demos/perl/GMP.xs: New type check scheme, support magic scalars,
+	support UV when available.  Remove some unused local variables.
+	(coerce_long): Check range of double.
+	(get_d_2exp): Remove stray printf.
+
+	* demos/perl/test.pl: Exercise magic, rearrange to make it clearer
+	what's being tested.
+
+2003-12-07  Kevin Ryde  <kevin@swox.se>
+
+	* tests/misc/t-scanf.c (test_sscanf_eof_ok): New function.
+	(check_misc): Use it to suppress tests broken by libc.
+	And should be EOF rather than -1 in various places.
+
+2003-12-03  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/x86/p6/aors_n.asm: New file, grabbing the K7 code.
+	Superiority of this reported by Patrick Pelissier.
+
+	* mpz/export.c: Allow NULL for countp.
+	* gmp.texi (Integer Import and Export): Describe this.
+	Suggested by Jack Lloyd.
+
+2003-11-30  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Debugging): Remove debauch, seems to have disappeared.
+	(Language Bindings): Corrections to URLs for CLN, Omni F77, Pike.
+
+2003-11-29  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Build Options): Update texinfo manual html cross reference.
+
+	* demos/perl/GMP/Mpf.pm (overload_string): Use $OFMT to avoid warnings
+	about $#.
+
+	* demos/perl/GMP.xs (fits_slong_p): Use LONG_MAX+1 to avoid possible
+	rounding of 0x7F..FF in a double on 64-bit systems.
+
+2003-11-25  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Language Bindings): Add Axiom.
+
+2003-11-15  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Assigning Integers): Remove notes on possible change
+	to disallow whitespace, this would be an incompatible change and
+	really can't be made.
+
+2003-10-25  Kevin Ryde  <kevin@swox.se>
+
+	* gmp-h.in (mpn_divmod_1): Use __GMP_CAST, to avoid warnings in
+	applications using g++ -Wold-style-cast.
+
+	* mpn/m68k/t-m68k-defs.pl: Don't use -> with hashes, to avoid
+	deprecation warnings from perl 5.8.
+
+	* Makefile.am (CXX_OBJECTS): Remove $U, C++ files are not subject to
+	ansi2knr rules.
+
+	* mpn/z8000/README: New file.
+
+2003-10-22  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Notes for Particular Systems): Note m68k gcc -mshort
+	and PalmOS calling conventions not supported.  Reported by Patrick
+	Pelissier.
+
+2003-10-18  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (C++ Formatted Input, C++ Formatted Output): Cross
+	reference class interface on overloading.
+
+	* mpn/m68k/README: Add various ideas from doc/tasks.html.
+
+	* mpn/m88k/README: New file.
+
+2003-10-12  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/m68k/aors_n.asm (INPUT PARAMETERS): Fix typo.
+	* mpn/m68k/lshift.asm: Likewise.
+	* mpn/m68k/rshift.asm: Likewise.
+
+	* mpn/m68k/README: Correct an URL; add some STATUS comments.
+
+2003-10-11  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/x86/pentium4/sse2/diveby3.asm: Remove non-PIC RODATA memory
+	access for 0xAAAAAAAB constant.
+
+2003-10-09  Kevin Ryde  <kevin@swox.se>
+
+	* tests/devel/try.c (_SC_PAGESIZE): Define from _SC_PAGE_SIZE on
+	systems which use that, eg. hpux 9.
+
+2003-10-04  Kevin Ryde  <kevin@swox.se>
+
+	* tune/freq.c (freq_bsd_dmesg): Demand matching of MHz etc at end of
+	sscanf format string.  In particular need this for freq_bsd_dmesg on
+	i486-pc-freebsd4.7 to avoid the 486 cpu being used for the frequency.
+
+2003-08-19  Kevin Ryde  <kevin@swox.se>
+
+	* longlong.h (add_ssaaaa, sub_ddmmss) [hppa 64]: Exclude for
+	_LONG_LONG_LIMB (ie. ABI=2.0n) since these forms are only for
+	ABI=2.0w.
+
+	* demos/perl/GMP.xs, demos/perl/GMP.pm, demos/perl/test.pl: Add
+	get_d_2exp.
+
+	* longlong.h (count_leading_zeros) [__mcpu32__]: Check __mcpu32__ to
+	avoid bfffo on GCC 3.4 in CPU32 mode.  Reported by Bernardo Innocenti.
+
+	* longlong.h (count_trailing_zeros) [x86_64]: Use "%q0" to force
+	64-bit register destination.  Pointed out by Torbjorn.
+
+2003-08-14  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Reentrancy): Remove SCO ctype.h note, don't want to list
+	every system misfeature, and was quite possibly for non-threading mode
+	anyway.
+	(Karatsuba Multiplication): Correction to threshold increase/decrease
+	for a and b terms.  Reported by Richard Brent and Paul Zimmermann.
+
+2002-08-05  Kevin Ryde  <kevin@swox.se>
+
+	From the development mainline:
+	* demos/perl/GMP.pm, demos/perl/GMP.xs, demos/perl/GMP/Mpz.pm,
+	demos/perl/test.pl: Add mpz_import and mpz_export.
+
+2003-07-31  Kevin Ryde  <kevin@swox.se>
+
+	* demos/perl/GMP.xs (class_or_croak): Rename "class" parameter to
+	avoid C++ keyword.
+	(coerce_ulong, coerce_long): Move croaks to stop g++ 3.3 complaining
+	about uninitialized variables.
+
+	* config.guess: Remove $dummy.o files everywhere, in case vendor
+	compilers produce that even when not asked.
+
+2003-07-05  Kevin Ryde  <kevin@swox.se>
+
+	* configure.in (i786-*-*): Recognise as pentium4, per configfsf.sub.
+
+2003-06-28  Kevin Ryde  <kevin@swox.se>
+
+	* mpz/get_d_2exp.c, mpf/get_d_2exp.c: Avoid res==1.0 when floats round
+	upwards.
+
+2003-06-22  Kevin Ryde  <kevin@swox.se>
+
+	* gmpxx.h (mpz_class __gmp_binary_divides, __gmp_binary_modulus): Fix
+	long/mpz and long%mpz for dividend==LONG_MIN divisor==-LONG_MIN.
+	(mpz_class __gmp_binary_modulus): Fix mpz%long for negative dividend.
+
+	* gmp-impl.h: Add __GMP_DECLSPEC to __gmp_fib_table
+	(for the benefit of tests/mpz/t-fib_ui.c).
+
+2003-06-15  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/x86/k6/mode1o.asm: Remove a bogus ASSERT.
+
+2003-06-08  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/x86/x86-defs.m4 (cmovCC, psadbw): Remove simulated versions.
+	(cmov_available_p, psadbw_available_p): Remove.
+	This trickery was only ever for development purposes on machines
+	without those instructions.  Removing it simplifies gmp and in
+	particular avoids complications for fat binary builds.  Development
+	can be done with a wrapper around "as" if really needed.
+
+2003-06-05  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/pa64: Change ".level 2.0W" to ".level 2.0w" to please
+	picky GNU assembler.
+
+2003-05-19  Torbjorn Granlund  <tege@swox.com>
+
+	* config.guess: Recognize viac3* processors.
+	* configure.in: Set up path for viac3* processors.
+	* acinclude.m4 (X86_PATTERN): Include viac3* processors.
+
+2003-05-18  Linus Nordberg  <linus@nordberg.se>
+
+	* gmp.texi: Three changes merged from HEAD for publication on web site:
+	(Notes for Particular Systems): Correct libtool library directory on
+	Windows.  Reported by Andreas Fabri.
+	(Build Options): Update Cygwin URL.
+	(References): Add Bertot, Magaud and Zimmermann on GMP Square Root.
+
+2003-04-24  Kevin Ryde  <kevin@swox.se>
+
+	* longlong.h (add_ssaaaa) [all]: Remove first "%" commutative in each,
+	since gcc only supports one per asm.
+
+	* gmp.texi (Debugging): New valgrind is getting MMX/SSE.
+	(Low-level Functions): Note with mpn_hamdist what hamming distance is.
+
+2003-04-18  Kevin Ryde  <kevin@swox.se>
+
+	* configure.in (m68060-*-*): Fallback to gcc -m68000 when -m68060 not
+	available, and don't use mpn/m68k/mc68020 asm routines.  (Avoids 32x32
+	mul and 64/32 div which trap to the kernel on 68060.  Advice by
+	Richard Zidlicky)
+	* mpn/m68k/README: Update notes on directory usage.
+
+	* gmp.texi (Language Bindings): Add Guile.
+
+2003-04-12  Kevin Ryde  <kevin@swox.se>
+
+	* gmp-impl.h (mpn_copyi, mpn_copyd): Add __GMP_DECLSPEC.
+
+2003-04-06  Kevin Ryde  <kevin@swox.se>
+
+	* mpz/gcd_ui.c: Correction to return value on longlong limb systems,
+	limb might not fit a ulong.
+	* tests/mpz/t-gcd_ui.c: New file.
+	* tests/mpz/Makefile.am: Add it.
+
+2003-03-07  Kevin Ryde  <kevin@swox.se>
+
+	* Makefile.am: Put gmp.h and mp.h under $(exec_prefix)/include.
+	* gmp.texi (Build Options): Add notes on this.
+	Reported by Vincent Lefèvre.
+
+2003-02-20  Kevin Ryde  <kevin@swox.se>
+
+	* demos/factorize.c (factor_using_pollard_rho): Test k>0 to avoid
+	infinite loop if k=0 and gcd!=1 reveals a factor.  Reported by John
+	Pongsajapan.
+
+2003-02-01  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Low-level Functions): No overlap permitted by mpn_mul_n.
+	Reported by Jason Moxham.
+	(Formatted Input Strings): Correction to strtoul cross reference
+	formatting.
+
+2003-01-25  Kevin Ryde  <kevin@swox.se>
+
+	* config.guess (powerpc*-*-*): Remove $dummy.core file when mfpvr
+	fails on NetBSD.
+	(trap): Remove $dummy.core on abnormal termination too.
+
+2003-01-15  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Notes for Particular Systems): Add hardware floating point
+	precision mode.
+
+2003-01-05  Kevin Ryde  <kevin@swox.se>
+
+	* configure.in (pentium4-*-*): Use "-march=pentium4 -mno-sse2" since
+	sse2 causes buggy code from gcc 3.2.1 and is only supported on new
+	enough kernels.
+
+	* gmp-h.in (__GMP_CAST): New macro, clean to g++ -Wold-style-cast.
+	(GMP_NUMB_MASK, mpz_cmp_si, mpq_cmp_si, mpz_odd_p, mpn_divexact_by3,
+	mpn_divmod): Use it.  Reported by Krzysztof Kozminski.
+	(mpz_odd_p): No need for the outermost cast to "int".
+	* tests/cxx/t-cast.cc: New file.
+	* tests/cxx/Makefile.am: Add it.
+
+	* gmp-h.in (mpz_mdivmod_ui, mpz_mmod_ui): Add parens around "r".
+
+2003-01-03  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Introduction to GMP): Mention release announcements
+	mailing list, and put home page and ftp before mailing lists.
+
+2002-12-24  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Integer Import and Export): Clarify treatment of signs,
+	reported by Kent Boortz.
+
+2002-12-13  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* tests/rand/t-lc2exp.c (check_bigs): Test negative seeds.
+
+2002-12-07  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* tests/rand/t-lc2exp.c (check_bigm, check_bigs): New tests.
+
+2002-12-05  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/pa64/sqr_diagonal.asm: Remove .entry, .proc, .procend.
+	* mpn/pa64/udiv_qrnnd.asm: Likewise.
+
+2002-12-05  Kevin Ryde  <kevin@swox.se>
+
+	* mpn/pa64/sub_n.asm: Remove space in "sub, db" which gas objects to.
+	* mpn/pa64/*.asm, tune/hppa2.asm: Use ".level 2.0" for 2.0n, since gas
+	doesn't like ".level 2.0N".
+
+2002-11-30  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/popcount.asm: Properly restore register ar.lc.
+
+	* gmp-impl.h: #undef MIN and MAX before #defining.
+
+2002-11-04  Kevin Ryde  <kevin@swox.se>
+
+	* demos/expr/expr-impl.h (stdarg.h): Test __DECC same as gmp.h.
+
+2002-09-18  Kevin Ryde  <kevin@swox.se>
+
+	* gmp.texi (Integer Comparisons): Remove mention of non-existant
+	mpz_cmpabs_si, reported by Conrad Curry.
+
+2002-09-07  Kevin Ryde  <kevin@swox.se>
+
+	* gmp-h.in, mp-h.in: Use #ifdef for tests, for the benefit of
+	applications using gcc -Wundef.
+
+2002-08-22  Kevin Ryde  <kevin@swox.se>
+
+	* config.guess (powerpc*-*-*): Use a { } construct to suppress SIGILL
+	message on AIX.
+
+2002-06-18  Kevin Ryde  <kevin@swox.se>
+
+	* tests/rand/t-lc2exp.c: New file.
+	* tests/rand/Makefile.am: Add it, and use tests/libtests.la.
+
+2002-06-15  Kevin Ryde  <kevin@swox.se>
+
+	* config.guess (CC_FOR_BUILD): Try c99, same as configfsf.guess.
+
+2002-06-14  Kevin Ryde  <kevin@swox.se>
+
+	* randlc2x.c: Allow for a<0
+	* randraw.c (lc): Allow for a==0.
 
 2002-12-24  Kevin Ryde  <kevin@swox.se>
 
