--- a/src/gmp/NEWS
+++ b/src/gmp/NEWS
@@ -1,4 +1,4 @@
-Copyright 1996, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+Copyright 1996, 1999, 2000, 2001, 2002, 2004 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -18,16 +18,37 @@ the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.
 
 
-Changes between MP version 4.1.1 and 4.1.2
+Changes between GMP version 4.1.3 and 4.1.4
+
+* Bug fix to FFT multiplication code (crash for huge operands).
+* Bug fix to mpf_sub (miscomputation).
+* Support for powerpc64-gnu-linux.
+* Better support for AMD64 in 32-bit mode.
+* Upwardly binary compatible with 4.1.3, 4.1.2, 4.1.1, 4.1, 4.0.1, 4.0,
+  and 3.x versions.
+
+Changes between GMP version 4.1.2 and 4.1.3
+
+* Bug fix for FFT multiplication code (miscomputation).
+* Bug fix to K6 assembly code for gcd.
+* Bug fix to IA-64 assembly code for population count.
+* Portability improvements, most notably functional AMD64 support.
+* mpz_export allows NULL for countp parameter.
+* Many minor bug fixes.
+* mpz_export allows NULL for countp parameter.
+* Upwardly binary compatible with 4.1.2, 4.1.1, 4.1, 4.0.1, 4.0, and 3.x
+  versions.
+
+Changes between GMP version 4.1.1 and 4.1.2
 
 * Bug fixes.
 
-Changes between MP version 4.1 and 4.1.1
+Changes between GMP version 4.1 and 4.1.1
 
 * Bug fixes.
 * New systems supported: NetBSD and OpenBSD sparc64.
 
-Changes between MP version 4.0.1 and 4.1
+Changes between GMP version 4.0.1 and 4.1
 
 * Bug fixes.
 * Speed improvements.
@@ -50,11 +71,11 @@ Changes between MP version 4.0.1 and 4.1
 * Nails-enabled Alpha 21264 assembly code, allowing up to 75% better
   performance.  (Use --enable-nails=4 to enable it.)
 
-Changes between MP version 4.0 and 4.0.1
+Changes between GMP version 4.0 and 4.0.1
 
 * Bug fixes.
 
-Changes between MP version 3.1.1 and 4.0
+Changes between GMP version 3.1.1 and 4.0
 
 * Bug fixes.
 * Speed improvements.
@@ -98,12 +119,12 @@ Changes between MP version 3.1.1 and 4.0
 * New preliminary perl interface (see demos/perl).
 * Tuned algorithm thresholds for many more CPUs.
 
-Changes between MP version 3.1 and 3.1.1
+Changes between GMP version 3.1 and 3.1.1
 
 * Bug fixes for division (rare), mpf_get_str, FFT, and miscellaneous minor
   things.
 
-Changes between MP version 3.0 and 3.1
+Changes between GMP version 3.0 and 3.1
 
 * Bug fixes.
 * Improved `make check' running more tests.
@@ -129,12 +150,12 @@ Changes between MP version 3.0 and 3.1
   To try it, pass --enable-mpfr to configure.  See the mpfr subdirectory for
   more information; it is not documented in the main GMP manual.
 
-Changes between MP version 3.0 and 3.0.1
+Changes between GMP version 3.0 and 3.0.1
 
 * Memory leaks in gmp_randinit and mpz_probab_prime_p fixed.
 * Documentation for gmp_randinit fixed.  Misc documentation errors fixed.
 
-Changes between MP version 2.0 and 3.0
+Changes between GMP version 2.0 and 3.0
 
 * Source level compatibility with past releases (except mpn_gcd).
 * Bug fixes.
@@ -166,11 +187,11 @@ Changes between MP version 2.0 and 3.0
 * Better support for MIPS R4x000 and R5000 under Irix 6.
 * Improved support for SPARCv8 and SPARCv9 processors.
 
-Changes between MP version 2.0 and 2.0.2
+Changes between GMP version 2.0 and 2.0.2
 
 * Many bug fixes.
 
-Changes between MP version 1.3.2 and 2.0
+Changes between GMP version 1.3.2 and 2.0
 
 * Division routines in the mpz class have changed.  There are three classes of
   functions, that rounds the quotient to -infinity, 0, and +infinity,
